fix button jumping

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 
+body {
+  overflow-anchor: none;
+}
 
 *::-webkit-scrollbar {
   width: 0 !important;
